--- a/src/app/shipping/shipping.component.html
+++ b/src/app/shipping/shipping.component.html
@@ -1,3 +1,7 @@
 <h3>Shipping Prices</h3>
 
-<div class="shipping-items" *ngFor="let shipp"
+<div class="shipping-items" *ngFor="let shipping of shippingCosts | async">
+  <span>{{ shipping.type }}</span>
+  <span>{{ shipping.price | currency }}</span>
+</div>
+
